[gd_scene load_steps=29 format=3 uid="uid://vjgitkpi38qs"]

[ext_resource type="Script" path="res://Script/Enemys/enemy.gd" id="1_7rliy"]
[ext_resource type="Texture2D" uid="uid://nvmw4mvl4dq1" path="res://Assets/Character/attacking.png" id="1_85nk0"]
[ext_resource type="Shader" path="res://Script/Shader/SpiteOutline.gdshader" id="2_dxnwx"]
[ext_resource type="Texture2D" uid="uid://8g5ar23x2lng" path="res://Assets/Character/idle.png" id="2_rvtm8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4e6io"]
shader = ExtResource("2_dxnwx")
shader_parameter/outline_color = null

[sub_resource type="AtlasTexture" id="AtlasTexture_bmjt2"]
atlas = ExtResource("1_85nk0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofrrh"]
atlas = ExtResource("1_85nk0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5lla"]
atlas = ExtResource("1_85nk0")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfa8"]
atlas = ExtResource("1_85nk0")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d500s"]
atlas = ExtResource("1_85nk0")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vypy7"]
atlas = ExtResource("1_85nk0")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgfp1"]
atlas = ExtResource("1_85nk0")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k0au"]
atlas = ExtResource("1_85nk0")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lry03"]
atlas = ExtResource("1_85nk0")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ia3"]
atlas = ExtResource("1_85nk0")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtbge"]
atlas = ExtResource("1_85nk0")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1oga"]
atlas = ExtResource("1_85nk0")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4tpg"]
atlas = ExtResource("1_85nk0")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lgv4"]
atlas = ExtResource("2_rvtm8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffq7v"]
atlas = ExtResource("2_rvtm8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_didtg"]
atlas = ExtResource("2_rvtm8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj5et"]
atlas = ExtResource("2_rvtm8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_pgv0j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmjt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofrrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5lla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcfa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d500s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vypy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgfp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k0au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lry03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ia3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtbge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1oga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4tpg")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lgv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffq7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_didtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj5et")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_457a6"]
radius = 40.3113

[sub_resource type="Gradient" id="Gradient_puyrd"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.675556)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pw0am"]
gradient = SubResource("Gradient_puyrd")
width = 256
height = 256
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_lpnlg"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.00444444, 0.675556)
colors = PackedColorArray(1, 0, 0.329412, 0.588235, 1, 1, 0.443137, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nkq71"]
gradient = SubResource("Gradient_lpnlg")
width = 128
height = 128
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_7rliy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4e6io")
sprite_frames = SubResource("SpriteFrames_pgv0j")
animation = &"Attack"
autoplay = "Idle"
frame = 3

[node name="DemageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DemageArea"]
shape = SubResource("CircleShape2D_457a6")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1.25, 1.125)
color = Color(1, 0.518123, 0.45217, 1)
texture = SubResource("GradientTexture2D_pw0am")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
texture = SubResource("GradientTexture2D_nkq71")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
